--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,24 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  height: 100%;
 }
+::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background-color: #ccc;
+
+}
+::-webkit-scrollbar{
+    width: 2px;
+    background-color: #F5F5F5;
+    
+}
+
+::-webkit-scrollbar-thumb{
+    border-radius: 2px;
+
+}
+
 
 a {
   color: inherit;
