--- a/components/PlayerWidget/index.module.scss
+++ b/components/PlayerWidget/index.module.scss
@@ -5,7 +5,7 @@
     border:"1px solid #ccc";
     @media screen and (max-width: 500px) {
         width: 100%;
-        height: calc(100% * 16 / 9);
+        height: 100%;
     }
     amp-story-player{
         margin: 5px;
@@ -14,7 +14,8 @@
         overflow: hidden;
         @media screen and (max-width: 500px) {
             width: 100% !important;
-            height: 100%;
+            height: 100% !important;
+            margin: 0;
         }
     }
 }
