--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,5 +1,5 @@
 .container {
-  padding: 0 2rem;
+  padding: 0 1rem;
 }
 
 .main {
@@ -10,6 +10,48 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  .articles{
+    width: 100%;
+    .readMore{
+      display: flex;
+      justify-content: space-between;
+      padding-right: 5px;
+      .readmoreBlock{
+        padding: 2px 1rem;
+        border-radius: 20px;
+        border: 1px solid var(--color-primary-light);
+        a{
+          color: var(--color-primary-light);
+          font-weight: bold;
+        }
+      }
+    }
+    
+  }
+  .stories{
+    width: 100%;
+    .storyList{
+      display: flex;
+      max-width: 100%;
+      overflow-x: scroll;
+    }
+    .storyList::-webkit-scrollbar-track {
+      border-radius: 10px;
+      background-color: #ccc;
+    }
+  
+    .storyList::-webkit-scrollbar{
+      height: 0;
+      background-color: #F5F5F5;
+    }
+  
+    .storyList::-webkit-scrollbar-thumb{
+      border-radius: 2px;
+      background-color: var(--color-primary-light);
+    }
+  }
+
 }
 
 .footer {
