--- a/components/ArticlePreview/index.module.scss
+++ b/components/ArticlePreview/index.module.scss
@@ -6,6 +6,7 @@
     border-radius: 10px;
     margin-top: 20px;
     margin-bottom: 20px;
+    max-width: 40%;
     .img{
         background-color: #f3f3f3;
         min-width: 100px;
