--- a/components/StoryPreview/index.module.scss
+++ b/components/StoryPreview/index.module.scss
@@ -1,6 +1,9 @@
 .storyPreview{
-    min-width: 40vw;
-    height: 60vw;
+    min-width: 50vw;
+    height: 75vw;
+   // min-width: 16vw;
+    max-width: 250px !important;
+    max-height: 300px;
     background-color: red;
     border-radius: 5px;
     margin: 1rem;
