--- a/components/StoryPreview/index.module.scss
+++ b/components/StoryPreview/index.module.scss
@@ -1,9 +1,10 @@
+
 .storyPreview{
     min-width: 50vw;
-    height: 75vw;
+    height: calc( 45vw * 16 / 9);
    // min-width: 16vw;
     max-width: 250px !important;
-    max-height: 300px;
+    max-height: ( 250px * 16 / 9 );
     background-color: red;
     border-radius: 5px;
     margin: 1rem;
@@ -17,6 +18,7 @@
         padding: 10px;
         height: 40%;
         color: #fff;
+        background-color: rgba(39, 40, 41, 0.445);
     }
     .logo{
         width: 40px;
