--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -10,7 +10,15 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
+  .h3{
+    background: -webkit-linear-gradient(97deg, rgba(7,155,238,1) 20%, rgba(8,41,190,1) 70%, rgba(3,24,99,1) 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    svg{
+      fill: var(--color-primary-light);
+    }
+  
+  }
   .articles{
     width: 100%;
     .articleList{
@@ -43,6 +51,7 @@
       display: flex;
       max-width: 100%;
       overflow-x: scroll;
+      margin-left: -10px;
     }
     .storyList:first-child{
       margin-left: -10px;
