--- a/components/StoryPreview/index.module.scss
+++ b/components/StoryPreview/index.module.scss
@@ -11,6 +11,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
+    overflow: hidden;
     .title{
         position: absolute;
         bottom: 0;
