--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -14,6 +14,8 @@
     background: -webkit-linear-gradient(97deg, rgba(7,155,238,1) 20%, rgba(8,41,190,1) 70%, rgba(3,24,99,1) 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    font-size: 1.4rem;
+    font-weight: bold;
     svg{
       fill: var(--color-primary-light);
     }
