--- a/components/ArticlePreview/index.module.scss
+++ b/components/ArticlePreview/index.module.scss
@@ -43,8 +43,7 @@
 }
 .odd{
     color: #fff;
-    background: rgb(7,155,238);
-    background: linear-gradient(97deg, rgba(7,155,238,1) 20%, rgba(8,41,190,1) 70%, rgba(3,24,99,1) 100%);
+    background: -webkit-linear-gradient(97deg, var(--color1) 20%, var(--color2) 70%, var(--color3) 100%);
     h3{
         color: #fff !important;
     }
