--- a/components/StoryPreview/index.module.scss
+++ b/components/StoryPreview/index.module.scss
@@ -1,10 +1,12 @@
 
 .storyPreview{
-    min-width: 50vw;
+    position: relative;
+    box-sizing: border-box;
+    width: 50vw;
     height: calc( 45vw * 16 / 9);
-   // min-width: 16vw;
+    min-width: 200px;
     max-width: 250px !important;
-    max-height: ( 250px * 16 / 9 );
+    max-height: ( 200px * 16 / 9 );
     background-color: red;
     border-radius: 5px;
     margin: 1rem;
