--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -11,7 +11,7 @@
   justify-content: center;
   align-items: center;
   .h3{
-    background: -webkit-linear-gradient(97deg, rgba(7,155,238,1) 20%, rgba(8,41,190,1) 70%, rgba(3,24,99,1) 100%);
+    background: -webkit-linear-gradient(97deg, var(--color1) 20%, var(--color2) 70%, var(--color3) 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-size: 1.4rem;
@@ -27,6 +27,10 @@
       width: 100%;
       display: flex;
       flex-wrap: wrap;
+      min-height: 200px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       a{
         width: 100%;
       }
@@ -69,8 +73,10 @@
     }
   
     .storyList::-webkit-scrollbar-thumb{
+
       border-radius: 2px;
       background-color: var(--color-primary-light);
+
     }
   }
 
@@ -178,3 +184,4 @@
     flex-direction: column;
   }
 }
+
