--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap');
+
 html,
 body {
   padding: 0;
@@ -40,4 +42,8 @@ a {
   --color-primary-light : rgba(8,41,190,1);
   --color-secondary-light : #102770;
   --text-color-primary : #2C2D31;
+  --color1: rgba(7,155,238,1);
+  --color2: rgba(8,41,190,1);
+  --color3: rgb(150, 9, 150);
 }
+
