--- a/components/ArticlePreview/index.module.scss
+++ b/components/ArticlePreview/index.module.scss
@@ -1,5 +1,5 @@
 .card{
-    box-shadow: 0.25rem 0.25rem 1.25rem rgba(66,95,255,.1);
+    // box-shadow: 0.25rem 0.25rem 1.25rem rgba(66,95,255,.1);
     display: flex;
     width: 100%;
     min-width: 100%;
@@ -50,5 +50,5 @@
 }
 
 .notOdd{
-    //border: 1px solid #ccc;
+    border: 1px solid #ccc;
 }
