--- a/components/Caroussel/index.module.scss
+++ b/components/Caroussel/index.module.scss
@@ -1,14 +1,7 @@
 $size-width: 700px;
 $size-height: 400px;
 
-.carouselWrapper {
-  height: $size-height * 1.4;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 20px;
-  margin-bottom: 3rem;
-}
+
 
 .carouselContainer {
   width: $size-width;
@@ -16,6 +9,11 @@ $size-height: 400px;
   overflow: hidden;
   margin: 0 auto;
   border-radius: 5px;
+  margin-bottom: 3rem;
+  .image{
+      border-radius: 5px;
+      overflow : hidden;
+  }
 }
 
 .carousel {
@@ -28,6 +26,8 @@ $size-height: 400px;
     height: $size-height;
     background-size: cover;
     background-position: center;
+    border-radius: 5px;
+    overflow: hidden;
   }
   &:hover {
     animation-play-state: paused;
@@ -67,13 +67,10 @@ $size-height: 400px;
 @media screen and (max-width: 768px) {
   $size-width: 330px;
   $size-height: 200px;
-  .carouselWrapper {
-    height: $size-height * 1.4;
-  }
-
+  
   .carouselContainer {
-    width: $size-width;
-    height: $size-height;
+    width: 100%;
+    height: 100%;
   }
 
   .carousel {
