--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap');
+@import "~bootstrap/scss/bootstrap";
 
 html,
 body {
@@ -194,3 +195,5 @@ a {
 		}
 	}
 }
+
+
