--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -8,6 +8,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   height: 100%;
+  background-color: #0F2557;
 }
 ::-webkit-scrollbar-track {
     border-radius: 10px;
