--- a/components/ArticlePreview/index.module.scss
+++ b/components/ArticlePreview/index.module.scss
@@ -10,6 +10,10 @@
     .body{
         min-height: 140px;
     }
+    .img{
+        max-height: 400px;
+        overflow: hidden;
+    }
 }
 
 .card{
