--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -11,7 +11,7 @@
   align-items: center;
   .h3{
     background: -webkit-linear-gradient(97deg, var(--color1) 20%, var(--color2) 70%, var(--color3) 100%);
-    -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
     font-size: 1.4rem;
     font-weight: bold;
@@ -36,7 +36,7 @@
       display: flex;
       flex-wrap: wrap;
       min-height: 200px;
-      display: flex;
+      justify-content: space-between;
 
       a{
         width: 100%;
