--- a/components/ArticlePreview/index.module.scss
+++ b/components/ArticlePreview/index.module.scss
@@ -11,7 +11,8 @@
         min-height: 140px;
     }
     .img{
-        max-height: 220px;
+        max-height: 200px;
+        min-height: 200px;
         overflow: hidden;
     }
 }
