--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,85 +1,5 @@
-.container {
-  padding: 0 1rem;
-}
-
 .main {
-  min-height: 100vh;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  .h3{
-    background: -webkit-linear-gradient(97deg, var(--color1) 20%, var(--color2) 70%, var(--color3) 100%);
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-    font-size: 1.4rem;
-    font-weight: bold;
-    svg{
-      fill: var(--color-primary-light);
-    }
-  
-  }
-  .articles{
-    width: 100%;
-
-
-    .articleList{
-      width: 100%;
-      display: flex;
-      flex-wrap: wrap;
-      min-height: 200px;
-      justify-content: space-between;
-
-      a{
-        width: 100%;
-      }
-    }
-    .readMore{
-      display: flex;
-      justify-content: space-between;
-      padding-right: 5px;
-      .readmoreBlock{
-        padding: 2px 1rem;
-        border-radius: 20px;
-        border: 1px solid var(--color-primary-light);
-        a{
-          color: var(--color-primary-light);
-          font-weight: bold;
-        }
-      }
-    }
-    
-  }
-  .stories{
-    width: 100%;
-    .storyList{
-      display: flex;
-      max-width: 100%;
-      overflow-x: scroll;
-      margin-left: -10px;
-    }
-    .storyList:first-child{
-      margin-left: -10px;
-    }
-    .storyList::-webkit-scrollbar-track {
-      border-radius: 10px;
-      background-color: #ccc;
-    }
-  
-    .storyList::-webkit-scrollbar{
-      height: 0;
-      background-color: #F5F5F5;
-    }
-  
-    .storyList::-webkit-scrollbar-thumb{
-
-      border-radius: 2px;
-      background-color: var(--color-primary-light);
-
-    }
-  }
-
+  padding: 1rem;
 }
 
 .footer {
