--- a/components/ArticlePreview/index.module.scss
+++ b/components/ArticlePreview/index.module.scss
@@ -19,20 +19,50 @@
 
 .card{
     // box-shadow: 0.25rem 0.25rem 1.25rem rgba(66,95,255,.1);
-    display: flex;
-    width: 100%;
-    min-width: 100%;
+    width: 45%;
+    max-width: 300px;
+    min-width: 300px;
     border-radius: 10px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin: 1rem;
     max-width: 40%;
-    .img{
+    img{
         background-color: #f3f3f3;
         min-width: 100px;
         height: max-content;
         border-radius: 10px;
         overflow: hidden;
         margin: 10px;
+    }
+    .meta{
+        display: flex;
+        flex-direction: column;
+        height: calc( 80px + 1rem );
+        max-height: calc( 80px + 1rem );
+        justify-content: space-between;
+        border-bottom: 1px solid #ccc;
+        padding-bottom: 1rem;
+    }
+    h1{
+        font-size: 1rem;
+        line-height: 1;
+        font-weight: normal;
+        display: -webkit-box;
+        -webkit-line-clamp: 2; /*No of lines after which the ellipsis needs to be added*/
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        margin: 0;
+    }
+    .foot{
+        display: flex;
+        justify-content: space-between;
+        font-size: .8rem;
+        .cat{
+            color: var(--color-secondary-light);
+            background: -webkit-linear-gradient(97deg, var(--color1) 20%, var(--color2) 70%, var(--color3) 100%);
+            padding: 0 1rem;
+            border-radius: 10px;
+        }
+       
     }
     .descs{
         margin-top: 10px;
