--- a/components/ArticlePreview/index.module.scss
+++ b/components/ArticlePreview/index.module.scss
@@ -20,11 +20,15 @@
 .card{
     // box-shadow: 0.25rem 0.25rem 1.25rem rgba(66,95,255,.1);
     width: 45%;
-    max-width: 300px;
-    min-width: 300px;
+    max-width: 310px;
+    min-width: 310px;
     border-radius: 10px;
     margin: 1rem;
     max-width: 40%;
+    @media (max-width: 500px) {
+        width: 90vw;
+        min-width: 90vw;
+    }
     img{
         background-color: #f3f3f3;
         min-width: 100px;
