--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -24,7 +24,20 @@
   }
   .articles{
     width: 100%;
-
+    .player{
+      width: 45%;
+      max-width: 310px;
+      min-width: 310px;
+      height: calc(310px * 16 / 9);
+      border-radius: 10px;
+      margin: 1rem;
+      max-width: 40%;
+      @media (max-width: 500px) {
+          width: 90vw;
+          min-width: 90vw;
+          height: calc(90vw * 16 / 9);
+      }
+    }
 
     .articleList{
       display: flex;
