--- a/components/PlayerWidget/index.module.scss
+++ b/components/PlayerWidget/index.module.scss
@@ -1,11 +1,30 @@
+.overlay{
+    background-color: #ccc;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(37, 41, 37, 0.281);
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .widget{
     position: "relative";
-    width: 300px;
-    height: 533.333333333px;
-    border:"1px solid #ccc";
-    @media screen and (max-width: 500px) {
-        width: 100%;
-        height: 100%;
+    width: 45%;
+    max-width: 310px;
+    min-width: 310px;
+    height: calc(310px * 16 / 9);
+    border-radius: 10px;
+    margin: 1rem;
+    max-width: 40%;
+    @media (max-width: 500px) {
+        margin: 0;
+        width: 100vw;
+        min-width: 100vw;
+        height: calc(100vw * 16 / 9);
     }
     amp-story-player{
         margin: 5px;
@@ -17,5 +36,24 @@
             height: 100% !important;
             margin: 0;
         }
+    }
+}
+.preview{
+    background-color: #ccc;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 10px;
+    .webStoryIcon{
+        position: absolute;
+        width: 50px;
+        height: 50px;
+        border-radius: 50px;
+        background-image: url("./amp-web-stories.png");
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        margin: 1rem;
     }
 }
