--- a/components/PlayerWidget/index.module.scss
+++ b/components/PlayerWidget/index.module.scss
@@ -45,15 +45,37 @@
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 10px;
-    .webStoryIcon{
-        position: absolute;
-        width: 50px;
-        height: 50px;
-        border-radius: 50px;
-        background-image: url("./amp-web-stories.png");
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
-        margin: 1rem;
+    overflow: hidden;
+    .calc{
+        background-color: rgba(3, 3, 3, 0.212);
+        width: 100%;
+        height: 100%;
+        .webStoryIcon{
+            position: absolute;
+            width: 40px;
+            height: 40px;
+            border-radius: 40px;
+            background-image: url("./amp-web-stories.png");
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            margin: 1rem;
+        }
+        .title{
+            position: relative;
+            top: 75%;
+            height: 25%;
+            max-height: 25%;
+            padding: 1rem;
+            color: #fff;
+            font-weight: bold;
+            font-size: 1.3rem;
+            p{
+                display: -webkit-box;
+                -webkit-line-clamp: 2; /*No of lines after which the ellipsis needs to be added*/
+                -webkit-box-orient: vertical;
+                overflow: hidden;
+            }
+        }
     }
 }
