--- a/components/PlayerWidget/index.module.scss
+++ b/components/PlayerWidget/index.module.scss
@@ -1,16 +1,3 @@
-.overlay{
-    background-color: #ccc;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(37, 41, 37, 0.281);
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 .widget{
     position: "relative";
     width: 45%;
@@ -18,7 +5,6 @@
     min-width: 310px;
     height: calc(310px * 16 / 9);
     border-radius: 10px;
-    margin: 1rem;
     max-width: 40%;
     @media (max-width: 500px) {
         margin: 0;
@@ -26,55 +12,51 @@
         min-width: 100vw;
         height: calc(100vw * 16 / 9);
     }
-    amp-story-player{
-        margin: 5px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        overflow: hidden;
-        @media screen and (max-width: 500px) {
-            width: 100% !important;
-            height: 100% !important;
-            margin: 0;
-        }
-    }
-}
-.preview{
-    background-color: #ccc;
-    width: 100%;
-    height: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    border-radius: 10px;
-    overflow: hidden;
-    .calc{
-        background-color: rgba(3, 3, 3, 0.212);
+    .preview{
+        background-color: #ccc;
         width: 100%;
         height: 100%;
-        .webStoryIcon{
-            position: absolute;
-            width: 40px;
-            height: 40px;
-            border-radius: 40px;
-            background-image: url("./amp-web-stories.png");
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-position: center;
-            margin: 1rem;
-        }
-        .title{
-            position: relative;
-            top: 75%;
-            height: 25%;
-            max-height: 25%;
-            padding: 1rem;
-            color: #fff;
-            font-weight: bold;
-            font-size: 1.3rem;
-            p{
-                display: -webkit-box;
-                -webkit-line-clamp: 2; /*No of lines after which the ellipsis needs to be added*/
-                -webkit-box-orient: vertical;
-                overflow: hidden;
+        background-repeat: no-repeat;
+        background-size: cover;
+        border-radius: 10px;
+        overflow: hidden;
+        .calc{
+            background-color: rgba(3, 3, 3, 0.212);
+            width: 100%;
+            height: 100%;
+            .webStoryIcon{
+                position: absolute;
+                width: 40px;
+                height: 40px;
+                border-radius: 40px;
+                background-image: url("./amp-web-stories.png");
+                background-size: cover;
+                background-repeat: no-repeat;
+                background-position: center;
+                margin: 1rem;
+            }
+            .title{
+                position: relative;
+                top: 60%;
+                height: 40%;
+                max-height: 40%;
+                padding: 1rem;
+                color: #fff;
+                font-weight: bold;
+                font-size: 1.3rem;
+                .category{
+                    width: max-content ;
+                    padding: 0 1rem;
+                    border-radius: 5px;
+                    font-size: 1rem;
+                    background: -webkit-linear-gradient(140deg, var(--color1) 20%, var(--color2) 70%, var(--color3) 100%);
+                }
+                p{
+                    display: -webkit-box;
+                    -webkit-line-clamp: 2; /*No of lines after which the ellipsis needs to be added*/
+                    -webkit-box-orient: vertical;
+                    overflow: hidden;
+                }
             }
         }
     }
