--- a/components/StoriesWidget/index.module.scss
+++ b/components/StoriesWidget/index.module.scss
@@ -1,5 +1,7 @@
 .list{
     display: flex;
+    margin: 1rem;
+    margin-bottom: 2rem;
     .outerCorner{
         border: 3px dotted #ccc;
         border-radius: 50%;
