--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -197,99 +197,93 @@ a {
 	}
 }
 
+.ampstart-footer-nav{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
 
-.ampstart-headerbar + :not(amp-sidebar),
-                .ampstart-headerbar + amp-sidebar + * {
-                    margin-top: 3.5rem;
-                }
-                .ampstart-headerbar-nav .ampstart-nav-item {
-                    padding: 0 1rem;
-                    background: transparent;
-                    opacity: 0.8;
-                }
-                .ampstart-headerbar-nav {
-                    line-height: 3.5rem;
-                }
-                .ampstart-nav-item:active,
-                .ampstart-nav-item:focus,
-                .ampstart-nav-item:hover {
-                    opacity: 1;
-                }
-                .ampstart-navbar-trigger:focus {
-                    outline: none;
-                }
-                .ampstart-nav a,
-                .ampstart-navbar-trigger,
-                .ampstart-sidebar-faq a {
-                    cursor: pointer;
-                    text-decoration: none;
-                }
-                .ampstart-nav .ampstart-label {
-                    color: inherit;
-                }
-                .ampstart-navbar-trigger {
-                    line-height: 3.5rem;
-                    font-size: 2rem;
-                }
-                .ampstart-headerbar-nav {
-                    -ms-flex: 1;
-                    flex: 1;
-                }
-                .ampstart-nav-search {
-                    -ms-flex-positive: 0.5;
-                    flex-grow: 0.5;
-                }
-                .ampstart-headerbar .ampstart-nav-search:active,
-                .ampstart-headerbar .ampstart-nav-search:focus,
-                .ampstart-headerbar .ampstart-nav-search:hover {
-                    box-shadow: none;
-                }
-                .ampstart-nav-search > input {
-                    border: none;
-                    border-radius: 3px;
-                    line-height: normal;
-                }
-                .ampstart-nav-dropdown {
-                    min-width: 200px;
-                }
-                .ampstart-nav-dropdown amp-accordion header {
-                    background-color: #fff;
-                    border: none;
-                }
-                .ampstart-nav-dropdown amp-accordion ul {
-                    background-color: #fff;
-                }
-                .ampstart-nav-dropdown .ampstart-dropdown-item,
-                .ampstart-nav-dropdown .ampstart-dropdown > section > header {
-                    background-color: #fff;
-                    color: #000;
-                }
-                .ampstart-nav-dropdown .ampstart-dropdown-item {
-                    color: #003f93;
-                }
-                .ampstart-sidebar {
-                    background-color: #fff;
-                    color: #000;
-                    min-width: 300px;
-                    width: 300px;
-                }
-                .ampstart-sidebar .ampstart-icon {
-                    fill: #003f93;
-                }
-                .ampstart-sidebar-header {
-                    line-height: 3.5rem;
-                    min-height: 3.5rem;
-                }
-                .ampstart-sidebar .ampstart-dropdown-item,
-                .ampstart-sidebar .ampstart-dropdown header,
-                .ampstart-sidebar .ampstart-faq-item,
-                .ampstart-sidebar .ampstart-nav-item,
-                .ampstart-sidebar .ampstart-social-follow {
-                    margin: 0 0 2rem;
-                }
-                .ampstart-sidebar .ampstart-nav-dropdown {
-                    margin: 0;
-                }
-                .ampstart-sidebar .ampstart-navbar-trigger {
-                    line-height: inherit;
-                }
+.flex-column {
+	-ms-flex-direction: column;
+	flex-direction: column;
+}
+.flex-wrap {
+	-ms-flex-wrap: wrap;
+	flex-wrap: wrap;
+}
+.items-start {
+	-ms-flex-align: start;
+	align-items: flex-start;
+}
+.items-end {
+	-ms-flex-align: end;
+	align-items: flex-end;
+}
+.items-center {
+	-ms-flex-align: center;
+	align-items: center;
+}
+.ampstart-label {
+	text-transform: uppercase;
+	font-size: 0.875rem;
+    color: #4f4f4f;
+    line-height: 1.125rem;
+    letter-spacing: 0.06rem;
+}
+.text-decoration-none {
+	text-decoration: none;
+}
+.list-reset {
+	list-style: none;
+	padding-left: 0;
+}
+.flex-wrap {
+	display: flex;
+	-ms-flex-wrap: wrap;
+	flex-wrap: wrap;
+}
+
+.mb3 {
+	margin-bottom: 1.5rem;
+}
+.px1 {
+	padding-left: 0.5rem;
+	padding-right: 0.5rem;
+}
+
+.px3 {
+	padding-left: 1.5rem;
+	padding-right: 1.5rem;
+}
+
+.ampstart-footer,
+.ampstart-small-text {
+	font-size: 0.75rem;
+	line-height: 1rem;
+	letter-spacing: 0.06rem;
+}
+
+.ampstart-footer {
+	background-color: #fff;
+	color: #000;
+	padding-top: 5rem;
+	padding-bottom: 5rem;
+}
+.ampstart-footer .ampstart-icon {
+	fill: #000;
+}
+.ampstart-footer .ampstart-social-follow li:last-child {
+	margin-right: 0;
+}
+
+.items-center {
+	-ms-flex-align: center;
+	align-items: center;
+}
+
+.ampstart-footer{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
