--- a/components/Menu/index.module.scss
+++ b/components/Menu/index.module.scss
@@ -23,6 +23,8 @@
             align-items: center;
             h1{
                 margin: 0;
+                margin-left: -30px;
+                font-size: 1.5rem;
             }
         }
     }
