--- a/pages/article/index.module.scss
+++ b/pages/article/index.module.scss
@@ -5,6 +5,7 @@
     display: flex;
     justify-content: space-between;
     height: 100%;
+    font-size: 1.5rem;
     
     aside{
         width: 310px;
