--- a/components/Menu/index.module.scss
+++ b/components/Menu/index.module.scss
@@ -5,6 +5,9 @@
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid #f3f3f3f3;
+    position: fixed;
+    z-index: 10;
+    background-color: #fff;
     .head{
         width: 100%;
         display: flex;
