--- a/components/StoriesWidget/index.module.scss
+++ b/components/StoriesWidget/index.module.scss
@@ -1,20 +1,86 @@
-.list{
-    display: flex;
-    margin: 1rem;
-    margin-bottom: 2rem;
-    .outerCorner{
-        border: 3px dotted #ccc;
-        border-radius: 50%;
-        margin-right: 1rem;
-        .innerConner{
-            margin: 5px;
-            border: 2px solid #ccc;
-            width: 20vw;
-            height: 20vw;
-            border-radius: 50%;
-            max-width: 70px;
-            max-height: 70px;
-            background-size: cover;
+.container{
+    padding: 1rem;
+    width: 70vw;
+    height: calc( 70vw * 16 / 9 );
+    max-width: 700px;
+    max-height: calc( 700px * 9 / 16);
+    margin-bottom: 4rem;
+    padding: 1rem;
+    @media (max-width: 500px) {
+        width: 90vw;
+        min-width: 90vw;
+        height: calc( 90vw * 9 / 16);
+    }
+
+}
+.card{
+    border-radius: 10px;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
+    .calc{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(53, 53, 53, 0.171);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .tag{
+            color: #fff;
+            font-weight: bold;
         }
+        .tag {
+            text-transform: Uppercase;
+            margin-bottom: .5em;
+            font-family: 'Rubik', sans-serif;
+            font-size: 6rem;
+            color: #E4E5E6; }
+            
+             .tag {
+            position: relative;
+            background: linear-gradient(to right, #24243e, #141E30, #0f0c29);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent; }
+            
+             .tag:before,
+             .tag:after {
+            content: attr(data-text);
+            position: absolute;
+            top: 0;
+            left: 0; }
+            
+             .tag:before {
+            z-index: -1;
+            text-shadow: -0.001em -0.001em 1px rgba(255,255,255,.15)}
+            
+             .tag:after {
+            z-index: -2;
+            text-shadow: 10px 10px 10px rgba(0,0,0,.5), 20px 20px 20px rgba(0,0,0,.4), 30px 30px 30px rgba(0,0,0,.1);
+            mix-blend-mode: multiply; }
+            
     }
 }
+// .list{
+//     display: flex;
+//     margin: 1rem;
+//     margin-bottom: 2rem;
+//     .outerCorner{
+//         border: 3px dotted #ccc;
+//         border-radius: 50%;
+//         margin-right: 1rem;
+//         .innerConner{
+//             margin: 5px;
+//             border: 2px solid #ccc;
+//             width: 20vw;
+//             height: 20vw;
+//             border-radius: 50%;
+//             max-width: 70px;
+//             max-height: 70px;
+//             background-size: cover;
+//         }
+//     }
+// }
