--- a/components/StoriesWidget/index.module.scss
+++ b/components/StoriesWidget/index.module.scss
@@ -5,20 +5,27 @@
     max-width: 700px;
     max-height: calc( 700px * 9 / 16);
     margin-bottom: 4rem;
-    padding: 1rem;
     @media (max-width: 500px) {
-        width: 90vw;
-        min-width: 90vw;
-        height: calc( 90vw * 9 / 16);
+        width: 100vw;
+        min-width: 100vw;
+        height: calc( 100vw * 9 / 16);
     }
 
 }
 .card{
     border-radius: 10px;
-    width: 100%;
-    height: 100%;
     overflow: hidden;
     position: relative;
+    width: 70vw;
+    height: calc( 70vw * 16 / 9 );
+    max-width: calc( 700px - 2rem );
+    max-height: calc( 700px * 9 / 16 - 2rem);
+    margin-bottom: 4rem;
+    @media (max-width: 500px) {
+        width: 90vw;
+        min-width: 90vw;
+        height: calc( 90vw * 9 / 16);
+    }
     .calc{
         position: absolute;
         top: 0;
@@ -35,32 +42,38 @@
         }
         .tag {
             text-transform: Uppercase;
-            margin-bottom: .5em;
             font-family: 'Rubik', sans-serif;
             font-size: 6rem;
-            color: #E4E5E6; }
+            color: #E4E5E6; 
+            @media (max-width: 500px) {
+                font-size: 4rem;
+            }
+        }
             
-             .tag {
+        .tag {
             position: relative;
             background: linear-gradient(to right, #24243e, #141E30, #0f0c29);
             -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent; }
+            -webkit-text-fill-color: transparent; 
+        }
             
-             .tag:before,
-             .tag:after {
+        .tag:before,.tag:after {
             content: attr(data-text);
             position: absolute;
             top: 0;
-            left: 0; }
+            left: 0; 
+        }
             
-             .tag:before {
+        .tag:before {
             z-index: -1;
-            text-shadow: -0.001em -0.001em 1px rgba(255,255,255,.15)}
+            text-shadow: -0.001em -0.001em 1px rgba(255,255,255,.15)
+        }
             
-             .tag:after {
+        .tag:after {
             z-index: -2;
             text-shadow: 10px 10px 10px rgba(0,0,0,.5), 20px 20px 20px rgba(0,0,0,.4), 30px 30px 30px rgba(0,0,0,.1);
-            mix-blend-mode: multiply; }
+            mix-blend-mode: multiply; 
+        }
             
     }
 }
