--- a/components/StoriesWidget/index.module.scss
+++ b/components/StoriesWidget/index.module.scss
@@ -1,10 +1,12 @@
 .container{
     padding: 1rem;
-    width: 70vw;
-    height: calc( 70vw * 16 / 9 );
+    width: 100vw;
+    height: calc( 70vw * 9 / 16  );
     max-width: 700px;
     max-height: calc( 700px * 9 / 16);
+    margin: 0 auto;
     margin-bottom: 4rem;
+
     @media (max-width: 500px) {
         width: 100vw;
         min-width: 100vw;
@@ -16,16 +18,9 @@
     border-radius: 10px;
     overflow: hidden;
     position: relative;
-    width: 70vw;
-    height: calc( 70vw * 16 / 9 );
-    max-width: calc( 700px - 2rem );
-    max-height: calc( 700px * 9 / 16 - 2rem);
-    margin-bottom: 4rem;
-    @media (max-width: 500px) {
-        width: 90vw;
-        min-width: 90vw;
-        height: calc( 90vw * 9 / 16);
-    }
+   
+    margin: 0 auto;
+   
     .calc{
         position: absolute;
         top: 0;
@@ -43,16 +38,16 @@
         .tag {
             text-transform: Uppercase;
             font-family: 'Rubik', sans-serif;
-            font-size: 6rem;
+            font-size: 5rem;
             color: #E4E5E6; 
             @media (max-width: 500px) {
-                font-size: 4rem;
+                font-size: 3rem;
             }
         }
             
         .tag {
             position: relative;
-            background: linear-gradient(to right, #24243e, #141E30, #0f0c29);
+            background: linear-gradient(to right, var(--color1), var(--color2), var(--color3));
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent; 
         }
