--- a/components/StoriesWidget/index.module.scss
+++ b/components/StoriesWidget/index.module.scss
@@ -1,36 +1,32 @@
 .container{
-    padding: 1rem;
     width: 100vw;
-    height: calc( 70vw * 9 / 16  );
-    max-width: 700px;
-    max-height: calc( 700px * 9 / 16);
-    margin: 0 auto;
+    max-height: max-content;
     margin-bottom: 4rem;
-
-    @media (max-width: 500px) {
-        width: 100vw;
-        min-width: 100vw;
-        height: calc( 100vw * 9 / 16);
-    }
-
+    display: flex;
+    overflow-x: scroll;
+    padding-left: 1rem;
 }
 .card{
-    border-radius: 10px;
+    border-radius: 20px;
     overflow: hidden;
-    position: relative;
-   
-    margin: 0 auto;
-   
+    position: relative;   
+    width: 40vw;
+    min-width: 230px;
+    max-width: 300px;
+    height: calc( 40vw * 3 / 4);
+    min-height: calc(300px * 5 /5);
+    max-height: calc(300px * 3 / 4);
+    margin: 5px;
     .calc{
         position: absolute;
-        top: 0;
+        bottom: 0;
         left: 0;
         width: 100%;
-        height: 100%;
-        background-color: rgba(53, 53, 53, 0.171);
+        height: 60%;
         display: flex;
         justify-content: center;
         align-items: center;
+        background-color: #000;
         .tag{
             color: #fff;
             font-weight: bold;
