--- a/components/PlayerWidget/index.module.scss
+++ b/components/PlayerWidget/index.module.scss
@@ -49,7 +49,7 @@
                     padding: 0 1rem;
                     border-radius: 5px;
                     font-size: 1rem;
-                    background: -webkit-linear-gradient(140deg, var(--color1) 20%, var(--color2) 70%, var(--color3) 100%);
+                   // background: -webkit-linear-gradient(140deg, var(--color1) 20%, var(--color2) 70%, var(--color3) 100%);
                 }
                 p{
                     display: -webkit-box;
