--- a/components/ArticlePreview/index.module.scss
+++ b/components/ArticlePreview/index.module.scss
@@ -21,34 +21,52 @@
     .meta{
         display: flex;
         flex-direction: column;
-        height: calc( 100px + 1rem );
-        max-height: calc( 100px + 1rem );
+        min-height: calc( 100px + 1rem );
         justify-content: space-between;
         border-bottom: 1px solid #ccc;
         padding-bottom: 1rem;
     }
     h1{
         font-size: 1.2rem;
-        line-height: 1;
         font-weight: normal;
         display: -webkit-box;
-        -webkit-line-clamp: 2; /*No of lines after which the ellipsis needs to be added*/
+        -webkit-line-clamp: 1; /*No of lines after which the ellipsis needs to be added*/
         -webkit-box-orient: vertical;
         overflow: hidden;
         margin: 0;
+        color: #021425;
+        font-size: 1.125rem;
+        line-height: 1.11111;
+        letter-spacing: .2px;
+        font-weight: 700;
+        margin-top: .5rem;
+        margin-bottom: .5rem;
+    }
+    .cat{
+        // color: var(--color-secondary-light);
+        // padding: 0 1rem;
+        // border-radius: 10px;
+        // border-top-left-radius: 0px;
+        // border-bottom-right-radius: 0px;
+        color: #808992;
+        letter-spacing: 1.4px;
+        font: 400 0.8125rem/2.0625 Inconsolata,verdana,sans-serif;
+        margin-top: .5rem;
+
     }
     .foot{
         display: flex;
+        flex-direction: column;
         justify-content: space-between;
         font-size: .9rem;
-        .cat{
-            color: var(--color-secondary-light);
-            padding: 0 1rem;
-            border-radius: 10px;
-            border-top-left-radius: 0px;
-            border-bottom-right-radius: 0px;
-        }
        
+    }
+
+    p{
+        display: -webkit-box;
+        -webkit-line-clamp: 3; /*No of lines after which the ellipsis needs to be added*/
+        -webkit-box-orient: vertical;
+        overflow: hidden;
     }
     .descs{
         margin-top: 10px;
