--- a/components/PlayerWidget/index.module.scss
+++ b/components/PlayerWidget/index.module.scss
@@ -12,6 +12,7 @@
         min-width: 100vw;
         height: calc(100vw * 16 / 9);
     }
+    margin-bottom: 1rem;
     .preview{
         background-color: #ccc;
         width: 100%;
@@ -21,9 +22,12 @@
         border-radius: 10px;
         overflow: hidden;
         .calc{
-            background-color: rgba(3, 3, 3, 0.212);
             width: 100%;
             height: 100%;
+            background-image: url("./calc.png");
+            background-position: bottom;
+            background-repeat: no-repeat;
+            background-size: 100% 40%;
             .webStoryIcon{
                 position: absolute;
                 width: 40px;
