--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -15,9 +15,9 @@
     background: -webkit-linear-gradient(97deg, var(--color1) 20%, var(--color2) 70%, var(--color3) 100%);
     background-clip: text;
     -webkit-text-fill-color: transparent;
-    font-size: 1.4rem;
+    font-size: 1rem;
     font-weight: bold;
-    font: 600 1.2rem Inconsolata,verdana,sans-serif;
+    font: 600  Inconsolata,verdana,sans-serif;
     color: #021425;
     letter-spacing: 1px;
     text-transform: uppercase;
