--- a/components/PlayerWidget/index.module.scss
+++ b/components/PlayerWidget/index.module.scss
@@ -28,6 +28,7 @@
             background-position: bottom;
             background-repeat: no-repeat;
             background-size: 100% 40%;
+            position: relative;
             .webStoryIcon{
                 position: absolute;
                 width: 40px;
