--- a/components/StoriesWidget/index.module.scss
+++ b/components/StoriesWidget/index.module.scss
@@ -10,6 +10,9 @@
         border: none;
         outline: none;
     }
+    svg{
+        margin: 1px 6px !important;
+    }
     .info{
         max-width: 300px;
         margin-top: 20px;
