--- a/components/StoriesWidget/index.module.scss
+++ b/components/StoriesWidget/index.module.scss
@@ -18,6 +18,8 @@
         background-color: #fff;
         border-radius: 5px;
         box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(243, 243, 243, 0.9529411765) 0px 0px 0px 1px;
+        height: 150px;
+        max-height: 150px;
         .img{
             width: 40vw;
             margin: .5rem;
