--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -13,16 +13,7 @@
   .h3{
     margin: 1rem;
     //background: -webkit-linear-gradient(97deg, var(--color1) 20%, var(--color2) 70%, var(--color3) 100%);
-    background-image: linear-gradient(
-    to right,
-    #462523 0,
-          #cb9b51 22%, 
-    #f6e27a 45%,
-    #f6f2c0 50%,
-    #f6e27a 55%,
-    #cb9b51 78%,
-    #462523 100%
-    );
+    background-image: linear-gradient(to right, #462523 0, #cb9b51 22%, #cb9b51 45%, #cb9b51 50%, #cfb844 55%, #cb9b51 78%, #462523 100%);
     background-clip: text;
     -webkit-text-fill-color: transparent;
     font-size: 1rem;
@@ -70,7 +61,7 @@
       flex-wrap: wrap;
       min-height: 200px;
       justify-content: space-between;
-      @media (max-width: 600px) {
+      @media (max-width:600px) {
         justify-content: center;
       }
       a{
