--- a/components/PlayerWidget/index.module.scss
+++ b/components/PlayerWidget/index.module.scss
@@ -54,6 +54,8 @@
                     padding: 0 1rem;
                     border-radius: 5px;
                     font-size: 1rem;
+                    background: linear-gradient(to right, #462523 0, #cb9b51 22%, #cb9b51 45%, #cb9b51 50%, #cfb844 55%, #cb9b51 78%, #462523 100%);
+
                    // background: -webkit-linear-gradient(140deg, var(--color1) 20%, var(--color2) 70%, var(--color3) 100%);
                 }
                 p{
