--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -18,7 +18,7 @@
     -webkit-text-fill-color: transparent;
     font-size: 1rem;
     font-weight: bold;
-    font: 600  Inconsolata,verdana,sans-serif;
+    font: bold  Inconsolata,verdana,sans-serif;
     color: #021425;
     letter-spacing: 1px;
     text-transform: uppercase;
