--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -10,7 +10,7 @@
   max-width: 700px;
   margin: 0 auto;
   .h3{
-    margin: 1rem;
+    margin: .5rem;
     //background: -webkit-linear-gradient(97deg, var(--color1) 20%, var(--color2) 70%, var(--color3) 100%);
     background-image: linear-gradient(to right, #462523 0, #cb9b51 22%, #cb9b51 45%, #cb9b51 50%, #cfb844 55%, #cb9b51 78%, #462523 100%);
     background-clip: text;
