--- a/components/StoriesWidget/index.module.scss
+++ b/components/StoriesWidget/index.module.scss
@@ -2,7 +2,8 @@
     max-height: max-content;
     //overflow-x: scroll;
     max-width: 700px;
-    margin: 70px auto;
+    padding-top: 70px;
+    margin: 0px auto;
     margin-bottom: 0;
     button{
         background-color: transparent;
