--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -42,13 +42,17 @@ a {
 }
 
 :root {
-  --nc-header-shadow : rgba(60,64,67,0.3);
-  --color-primary-light : rgba(8,41,190,1);
-  --color-secondary-light : #fff;
-  --text-color-primary : #2C2D31;
-  --color1: rgba(7,155,238,1);
-  --color2: rgba(8,41,190,1);
-  --color3: rgb(150, 9, 150);
+	--theme-light : #ffffff;
+	--theme-dark : #262626;
+	--theme-text-light : #000;
+	--theme-text-dark : #ccc;
+	--nc-header-shadow : rgba(60,64,67,0.3);
+	--color-primary-light : rgba(8,41,190,1);
+	--color-secondary-light : #fff;
+	--text-color-primary : #2C2D31;
+	--color1: rgba(7,155,238,1);
+	--color2: rgba(8,41,190,1);
+	--color3: rgb(150, 9, 150);
 }
 
 .ql-align-center{
