--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,6 +1,7 @@
 .containerLight {
   background-color: var(--theme-light);
   color: var(--theme-text-light);
+  padding-top: 70px;
   a:hover{
     color: var(--theme-text-light);
   }
@@ -8,6 +9,8 @@
 .containerDark {
   background-color: var(--theme-dark);
   color: var(--theme-text-dark);
+  padding-top: 70px;
+
   a:hover{
     color: var(--theme-text-dark);
   }
