--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -50,7 +50,9 @@
       }
     }
     .select{
-      max-width: max-content;
+      width: 40vw;
+      max-width: 200px;
+      margin-right: .5rem;
     }
   }
   .articles{
