--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -53,6 +53,10 @@
       width: 40vw;
       max-width: 200px;
       margin-right: .5rem;
+      font-size: 1rem;
+      *{
+        font-size: 1rem;
+      }
     }
   }
   .articles{
